# GlossTrainer

./: .gitignore  .gitmodules  README.md  xmake.lua
.xmake/windows/x64/: xmake.conf
.xmake/windows/x64/cache/: config  detect  history  package  references  repository  toolchain
GTA4/: CMakeLists.txt  GlossTrainer.cpp  README.md  xmake.lua
GTA4/src/: GlossTrainer.cpp  GlossTrainer.h  dllmain.hpp  main.cpp  main.h
GTA4/src/kiero/: kiero.cpp  kiero.h
GTA4/src/log/: Logger.hpp
GTA4/src/trainer/: global.h  trainer.cpp  trainer.h
InternetCafeEvolution/: xmake.lua
InternetCafeEvolution/src/: main.cpp
Scripts/: build_and_install.lua  xmake.lua
